# ordergroove/types/components/schemas/PaymentPage.ts
@@ -1,0 +1,13 @@
+import type { Payment } from "./Payment.js";
+
+export type PaymentPage = {
+  /**
+   * @format uri
+   */
+  next: string | null;
+  /**
+   * @format uri
+   */
+  previous: string | null;
+  results: Array<Payment>;
+};
